2020-07-10  Michael Herstine  <sp1ff@pobox.com>

	Final commit of the `genre' sub-command.
	This commit completes the implementation of the `genre' sub-
	command:

	    1. add'nl tests & fixes for the bugs found therefrom

	    2. moved the `xtag' sub-command over to the tagset_processor
	       framework

	    3. moved the `popm' sub-command over to the tagset_processor
	       framework

2020-06-27  Michael Herstine  <sp1ff@pobox.com>

	Initial commit for the `genre' sub-command.
	This commit adds a new sub-command: `git genre' that allows the
	user to update the "genre" in ID3v1 and/or v2 tags.

2020-05-25  Michael Herstine  <sp1ff@pobox.com>

	Assorted bug fixes:
	    - https://github.com/sp1ff/scribbu/issues/4: "id3v2_tag text frame
	      virtuals will SEGV if the relevant frame isn't there"

	Initial commit for the 0.6 release; updating package version along with boilerplate throughout.

2019-11-06  Michael Herstine  <sp1ff@pobox.com>

	Release 0.5 of scribbu.

2019-11-05  Michael Herstine  <sp1ff@pobox.com>

	This commit makes a few minor changes prior to releasing:
	    1. new verbiage in the Texinfo manual on string character
	       encodings

	    2. replaced `bp.py' with `admin/update-boilerplate'

	    3. minor documentation updates

2019-10-18  Michael Herstine  <sp1ff@pobox.com>

	This commit adds information on how to use libscribbu from C++:
	  1. a new chapter on this in the Texinfo manual

	  2. a sample program

	It also adds a minor test illustrating a shortcoming in the
	convert_encoding API. & addresses a number of little bugs
	in the documentation.

2019-09-27  Michael Herstine  <sp1ff@pobox.com>

	Bug squashing prior to 0.5:
	This commit fixes:

	  1. https://github.com/sp1ff/scribbu/issues/1: `scribbu popm --create' will only create PCNT frames

	  2. https://github.com/sp1ff/scribbu/issues/2: `scribbu' help messages not working consistently

	  3. https://github.com/sp1ff/scribbu/issues/3: add $(datadir)/guile/site to %load-path
